--- a/ProjectML/templates/all_evaluations.html
+++ b/ProjectML/templates/all_evaluations.html
@@ -4,6 +4,51 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+  <style media="screen">
+  /* Dropdown Button */
+  .dropbtn {
+    background-color: #e7f3f1;
+    color: black;
+    padding: 4px;
+    font-size: 10px;
+    border: none;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #bfebec;}
+
+  </style>
   <title>All evaluations</title>
   </head>
     <body>
@@ -25,7 +70,6 @@
           <th>Dataset path</th>
           <th>Date Created</th>
           <th>Actions</th>
-          <th>Delete</th>
         </thead>
         {% for evaluation in entities %}
           <tr>
@@ -35,15 +79,25 @@
             <td>{{evaluation.model_path | reverse_by_word}}</td>
             <td>{{evaluation.dataset_path | reverse_by_word}}</td>
             <td>{{evaluation.date_created}}</td>
-            {% if evaluation.model_type == 'classification' %}
-              <td> <a href="/evaluate/classification/{{evaluation.eval_id}}">Visualise_C</a></td>
-            {% else %}
-              <td> <a href="/evaluate/regression/{{evaluation.eval_id}}">Visualise_R</a></td>
-            {% endif %}
-            <td><a class="btn btn-danger" href="/evaluate/{{evaluation.eval_id}}/delete"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-              <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-              <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-            </svg></a></td>
+            <td>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                  </svg>
+                </button>
+                <div class="dropdown-content">
+                  {% if evaluation.model_type == 'classification' %}
+                    <a href="/evaluate/classification/{{evaluation.eval_id}}">Visualise</a>
+                  {% else %}
+                    <a href="/evaluate/regression/{{evaluation.eval_id}}">Visualise</a>
+                  {% endif %}
+                  <a style="color: red;" href="/evaluate/{{evaluation.eval_id}}/delete">Delete</a>
+                </div>
+              </div>
+            </td>
+
+
           </tr>
         {% endfor %}
       </table>
